objects/AB4CD__BuilderComp__c.object
<CustomObject>
    <fields>
        <fullName>AB4CD__Payload__c</fullName>
        <label>Payload</label>
        <length>35000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB4CD__Reference__c</fullName>
        <label>Reference</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB4CD__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VF</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BuilderComp</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>BID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BuilderComps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>